--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 Conexion a la Base de Datos
-MONGO_CONNECT = mongodb+srv://rmferreyra:uUeTHHZbSBN4DYVE@ferreyra.a8odytm.mongodb.net/?retryWrites=true&w=majority
+MONGO_CONNECT = mongodb+srv://rmferreyra:FlXCxVPlLHaNKBYF@database.ekzcirz.mongodb.net/?retryWrites=true&w=majority
 
 Puerto y Host
 PORT = 8080
@@ -22,4 +22,4 @@ ADMIN_PASSWORD = admincoder1234
 
 MAIL
 GMAIL_ADDRESS = rmferreyra@gmail.com
-GMAIL_PWD = "veqv kaby wdgf egir"
+GMAIL_PWD = "vekv kaby wdgf ejir"
